2008-08-21  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8826: calls to ini_set produces warnings

2008-08-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #9201: Integrate support for definition list into htmlArea RTE

2008-08-20  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #5205: pi_loadLL() + no language file == full path disclosure

2008-08-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up for issue #9185: Incorrect initialization when hooks are present
	* Fixed bug #9197: Misbehaviour of DAM media tab in htmlArea RTE link insertion dialogue

2008-08-18  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up for feature #4686: htmlArea RTE Spell Checker: add u modifier to preg_* operations
	* Follow-up for bug #8232: Creating and editing of fields, forms, etc. in FCE's is impossible if there is a section inside
	* Fixed issue #2714: In RTE htmlArea, unable to do an internal link with several parameters

2008-08-18  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8627: Translation of the belog-module (thanks to Christopher Stelmaszyk and Christian Kuhn)
	* Fixed bug #8532: enhance TYPO3 manual (inline) (thanks to Steffen Kamper, Jens Hoffman and Uschi Renziehausen)
	* Fixed bug #7921: recursive pidInList for select in cObj CONTENT (thanks to Georg Ringer)
	* Fixed bug #9141: Update Wizard uses wrong scheme to write compat_version to localconf.php
	* Fixed bug #9152: Deprecated code into stdgraphic
	* Fixed bug #9183: saveDocNew for all tables except the option is set to 0
	* Fixed bug #8232: Creating and editing of fields, forms, etc. in FCE's is impossible if there is a section inside

2008-08-16  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #9109: Enable altMountPoints feature in RTE element browser (Thanks to Steffen Kamper)
	* Added feature #4686: Remove dependency of htmlArea RTE Spell Checker on php extension mbstring
	* Fixed issue #9185: Redundant code in class.tx_rtehtmlarea_browse_links.php
